# custom_byterun

./: .flake8  .gitignore  Makefile  Readme.md  pyproject.toml
.github/workflows/: makefile.yml
byterun/: __main__.py  execfile.py  pyobj.py  pyvm2.py
tests/: test_basic.py  test_exceptions.py  test_functions.py  test_with.py  vmtest.py
